--- a/src/app/part/card/card.component.html
+++ b/src/app/part/card/card.component.html
@@ -7,49 +7,20 @@
         <img
             [src]=card.imageUrl.value
         />
-        <div class="card-body"
-        style="resize: both">
-            <div class="card-title"
-            style="font-size: 2.5vh;
-            text-align: center;
+        <div class="card-body">
 
-            "
-            >{{card.manufacturer.value}}</div>
-            <div class="card-title"
-            style="
+            <div class="card-title">
+                <img
+                    style="height: 1rem;"
+                    [src]=card.logoURL.value >
+                {{card.manufacturer.value}}</div>
 
-            /*width: 100%;
-            height: 100%;*/
-display: inline-flex;
-            height: auto;
-            width: auto;
-            resize: both;
-            white-space: nowrap;
-            border: solid 1px;
-            margin-top: 0px;
-            text-align: center"
-            >{{card.type.value}}</div>
+            <app-text-var-size-block
+                [subtitle] = card.type.value
+            ></app-text-var-size-block>
 
-            <table class="table table-striped">
-                <tbody>
-                <tr>
-                    <th scope="row" [innerHTML]="card.engineCapacity.name"></th>
-                    <td>{{card.engineCapacity.value}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">{{card.acceleration.name}}</th>
-                    <td>{{card.acceleration.value}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">{{card.topSpeed.name}}</th>
-                    <td>{{card.topSpeed.value}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">{{card.powerHP.name}}</th>
-                    <td>{{card.powerHP.value}}</td>
-                </tr>
-                </tbody>
-            </table>
+            <app-tab-content
+                [datas]="frontDatas()"></app-tab-content>
             <a href="#" class="btn btn-primary">Add to Cart</a>
         </div>
     </div>
@@ -61,18 +32,18 @@ display: inline-flex;
             &#8656;
         </button>
 
-        <ul class="nav nav-tabs" id="back-tabs{{card.id}}">
+        <ul class="nav nav-tabs" id="back-tabs_{{card.id}}">
             <li>
-                <a class="nav-link active" href="#chassis{{card.id}}" data-bs-toggle="tab">Chassis</a>
+                <a class="nav-link active" href="#chassis_{{card.id}}" data-bs-toggle="tab">Chassis</a>
             </li>
             <li>
-                <a class="nav-link" href="#drive{{card.id}}" data-bs-toggle="tab">Drive</a>
+                <a class="nav-link" href="#drive_{{card.id}}" data-bs-toggle="tab">Drive</a>
             </li>
             <li>
-                <a class="nav-link" href="#dim{{card.id}}" data-bs-toggle="tab">Dim.</a>
+                <a class="nav-link" href="#dim_{{card.id}}" data-bs-toggle="tab">Dim.</a>
             </li>
             <li>
-                <a class="nav-link" href="#transm{{card.id}}" data-bs-toggle="tab">Transm.</a>
+                <a class="nav-link" href="#transm_{{card.id}}" data-bs-toggle="tab">Transm.</a>
             </li>
         </ul>
 
@@ -80,21 +51,21 @@ display: inline-flex;
             <div
                 class="tab-pane active"
                 style="background-color: ivory"
-                id="chassis{{card.id}}">
-
-            <app-tab-content
-            [card] = card></app-tab-content>
-
-
+                id="chassis_{{card.id}}">
+                <app-tab-content
+                    [datas]=chassisTabDatas()></app-tab-content>
             </div>
-            <div class="tab-pane" id="drive{{card.id}}">
-                Profike
+            <div class="tab-pane" id="drive_{{card.id}}">
+                <app-tab-content
+                    [datas]=driveTabDatas()></app-tab-content>
             </div>
-            <div class="tab-pane" id="dim{{card.id}}">
-                Messages
+            <div class="tab-pane" id="dim_{{card.id}}">
+                <app-tab-content
+                    [datas]=dimensionTabDatas()></app-tab-content>
             </div>
-            <div class="tab-pane" id="transm{{card.id}}">
-                Settings
+            <div class="tab-pane" id="transm_{{card.id}}">
+                <app-tab-content
+                    [datas]=transmissionTabData()></app-tab-content>
             </div>
         </div>
 
