--- a/src/app/part/deck/deck.component.html
+++ b/src/app/part/deck/deck.component.html
@@ -1,6 +1,6 @@
 <div style="background-color: gray">
   <div class="container-fluid" >
-
+<!--<app-font-size-variable></app-font-size-variable>-->
 <app-card
 *ngFor="let card of cards"
 [card]="card">
