--- a/src/app/part/tab-content/tab-content.component.html
+++ b/src/app/part/tab-content/tab-content.component.html
@@ -1,8 +1,14 @@
 <table class="table table-striped">
-<tbody>
-<tr>
-    <th scope="row">{{card.manufacturer.name}}</th>
-    <td>{{card.manufacturer.value}}</td>
-</tr>
-</tbody>
+    <tbody>
+    <tr
+        *ngFor="let data of datas">
+        <th scope="row" [innerHTML]=data.name></th>
+        <ng-container *ngIf="!isNumber(data.value) || (isNumber(data.value) && data.value >= 0); else noData">
+            <td>{{data.value}}</td>
+        </ng-container>
+        <ng-template #noData>
+            <td>N/A</td>
+        </ng-template>
+    </tr>
+    </tbody>
 </table>
