--- a/src/app/part/deck/deck.component.html
+++ b/src/app/part/deck/deck.component.html
@@ -3,7 +3,8 @@
 <!--<app-font-size-variable></app-font-size-variable>-->
 <app-card
 *ngFor="let card of cards"
-[card]="card">
+[card]="card"
+>
 
 </app-card>
   </div>
