--- a/src/app/part/card/card.component.css
+++ b/src/app/part/card/card.component.css
@@ -32,16 +32,24 @@
 
 .card-title {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     font-weight: bolder;
-    text-align: center;
+    height: 100%;
+    width: 100%;
+    white-space: nowrap;
     text-transform: uppercase;
+    margin-bottom: 8%;
 }
 
 .img-logo {
     height: 40px;
     background-color: #e1e8ee;
 
+}
+
+.wrapper .selected {
+    background-color: #0f5132;
 }
 
 /*.wrapper:hover>.front-face {
