--- a/src/app/part/card/card.component.css
+++ b/src/app/part/card/card.component.css
@@ -35,11 +35,13 @@
     justify-content: center;
     align-items: center;
     font-weight: bolder;
+    font-family: Tahoma;
     height: 100%;
     width: 100%;
     white-space: nowrap;
     text-transform: uppercase;
     margin-bottom: 8%;
+    font-size: 120%;
 }
 
 .img-logo {
@@ -71,15 +73,14 @@
 
 .img-car {
     border-radius: 10px 10px 0px 0px;
-    object-fit: cover;
-    min-height: 200px;
-    max-height: 200px;
+
+
     border-radius: 10px 10px 0px 0px;
     margin-bottom: 0px;
     /*ezek kellenek a db-be*/
     object-position: 0vh 0vh;
     width: 100%;
-    height: 100%;
+    height: 180px;
 }
 
 .back-face-top {
@@ -127,16 +128,8 @@
 .front-table  {
 
 
-    line-height: 0.6;
+    line-height: 0.8;
 
 }
 
-.sendbtn {
-    height: 6.7%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 0px 0px 10px 10px;
-    background-color: #dfc2c4;
-    border: 1px solid black;
-    line-height: 1;
-}
+
