--- a/src/app/part/card/tab-content/tab-content.component.html
+++ b/src/app/part/card/tab-content/tab-content.component.html
@@ -1,4 +1,5 @@
-<table class="table table-striped">
+<table class="table table-striped"
+style="height: 100%">
     <tbody>
     <tr
         *ngFor="let data of datas">
