Admin page: fixed ipnut fields data and outlook, change card size, make the front page relative.

--- a/src/app/part/card/card.component.html
+++ b/src/app/part/card/card.component.html
@@ -9,7 +9,9 @@
             [src]=card.imageUrl.value
         />
 
-        <div style="display: flex">
+        <div
+            class="title-row"
+            style="display: flex">
             <img
                 class="img-logo"
 
@@ -19,6 +21,7 @@
             </div>
         </div>
         <app-text-var-size-block
+            class="type-row"
             [card]="card"
         ></app-text-var-size-block>
 
