--- a/src/app/part/card/tab-content/tab-content.component.css
+++ b/src/app/part/card/tab-content/tab-content.component.css
@@ -1,13 +1,13 @@
 .table th {
     font-family: "Calibri Light";
-    font-size: 1.1rem;
+    font-size: 0.9em;
     font-weight: bold;
     text-align: left;
 }
 
 .table td {
     font-family: "Calibri Light";
-    font-size: 1.2rem;
+    font-size: 1em;
     text-align: right;
 }
 
