--- a/src/app/part/card/card.component.css
+++ b/src/app/part/card/card.component.css
@@ -3,8 +3,8 @@
 
 .wrapper {
     display: inline-flex;
-    height: 420px;
-    width: 280px;
+    height: 350px;
+    width: 230px;
     flex: none;
     position: relative;
     transform-style: preserve-3d;
@@ -71,18 +71,6 @@
     transform: rotateY(0deg);
 }
 
-.img-car {
-    border-radius: 10px 10px 0px 0px;
-
-
-    border-radius: 10px 10px 0px 0px;
-    margin-bottom: 0px;
-    /*ezek kellenek a db-be*/
-    object-position: 0vh 0vh;
-    width: 100%;
-    height: 180px;
-}
-
 .back-face-top {
     height: 5%;
     width: 100%;
@@ -124,12 +112,36 @@
     font-size: 0.7rem;
 }
 
+/*Ezek adják a 100% height-et*/
+.img-car {
+    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+    margin-bottom: 0px;
+    /*ezek kellenek a db-be*/
+    object-position: 0vh 0vh;
+    object-fit: cover;
+    height: 45%;
+}
 
 .front-table  {
 
+height: 26.8%;
+    line-height: 0.4;
 
-    line-height: 0.8;
+}
 
+.title-row {
+    height: 10%;
+}
+
+.type-row {
+    height: 7%;
+    margin-top: 4%;
+    margin-bottom: 2%;
+}
+
+app-select-button {
+    height: 7%;
 }
 
 
