Admin page: card update to database working

--- a/src/app/part/card/card.component.css
+++ b/src/app/part/card/card.component.css
@@ -4,8 +4,8 @@
 .wrapper {
     display: inline-flex;
     height: 350px;
-    width: 250px;
-    flex: none;
+    width: 260px;
+    /*flex: none;*/
     position: relative;
     transform-style: preserve-3d;
     perspective: 1000px;
@@ -28,6 +28,10 @@
 
 .card-body {
 
+}
+
+.title-row {
+    display: flex;
 }
 
 .card-title {
@@ -61,7 +65,20 @@
 .wrapper .front-face {
     /*overflow: hidden;*/
     background-color: #fff5d8;
-    overflow: hidden;
+
+    /*overflow: hidden;*/
+}
+
+.img-container {
+    height: 45%;
+}
+
+/*Ezek adják a 100% height-et*/
+.img-car {
+
+    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px 10px 0px 0px;
+    object-fit: cover;
 }
 
 .wrapper.flipCard .front-face {
@@ -113,20 +130,7 @@
     font-size: 0.7rem;
 }
 
-/*Ezek adják a 100% height-et*/
-.img-car {
 
-    border-radius: 10px 10px 0px 0px;
-    border-radius: 10px 10px 0px 0px;
-    margin-bottom: 0px;
-    object-fit: cover;
-
-    overflow: hidden;
-    /*ezek kellenek a db-be*/
-    object-position: 0vh 0vh;
-
-    height: 45%;
-}
 
 .front-table  {
 
@@ -142,7 +146,7 @@ height: 26.8%;
 .type-row {
     height: 7%;
     margin-top: 4%;
-    margin-bottom: 2%;
+    margin-bottom: 1.5%;
 }
 
 app-select-button {
