--- a/src/app/part/deck/deck.component.html
+++ b/src/app/part/deck/deck.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid" >
 <!--<app-font-size-variable></app-font-size-variable>-->
 <app-card
-*ngFor="let card of cards"
+*ngFor="let card of cardList"
 [card]="card"
 >
 
