Admin page: add constants to some attribute, input and check filter working properly

--- a/src/app/part/card/card.component.css
+++ b/src/app/part/card/card.component.css
@@ -71,13 +71,12 @@
 
 .img-container {
     height: 45%;
+    overflow-x: hidden;
+    border-radius: 10px 10px 0px 0px;
 }
 
 /*Ezek adják a 100% height-et*/
 .img-car {
-
-    border-radius: 10px 10px 0px 0px;
-    border-radius: 10px 10px 0px 0px;
     object-fit: cover;
 }
 
