--- a/src/app/part/deck/deck.component.html
+++ b/src/app/part/deck/deck.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: gray">
+<div>
   <div class="container-fluid" >
 <!--<app-font-size-variable></app-font-size-variable>-->
 <app-card
