Added popup card image, same size not working yet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   rel="stylesheet"
 />
 
-<app-fight-table></app-fight-table>
+<!--<app-fight-table></app-fight-table>-->
 <app-admin-page>
 
 </app-admin-page>
