--- a/src/app/part/deck/deck.component.html
+++ b/src/app/part/deck/deck.component.html
@@ -7,8 +7,8 @@
         >
 
         </app-card>
-        <app-popup-img
+        <!--<app-popup-img
             [hidden]="showPopup"
-        [popupCard]="popupCard"></app-popup-img>
+        [popupCard]="popupCard"></app-popup-img>-->
     </div>
 </div>
