Added locked img to the image top-left position

--- a/src/app/part/card/card.component.css
+++ b/src/app/part/card/card.component.css
@@ -92,6 +92,21 @@
     line-height: 0rem;
 }
 
+.locked-btn {
+    position: absolute;
+    top: 0rem;
+    left: 0rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 10px 0px 0px 0px;
+    opacity: 20%;
+    cursor: not-allowed;
+data-toggle: tooltip;
+    data-placement: right;
+    title: Locked;
+    line-height: 0rem;
+}
+
 .wrapper.flipCard .front-face {
     transform: rotateY(-180deg);
 }
