--- a/src/app/part/card/card.component.html
+++ b/src/app/part/card/card.component.html
@@ -1,8 +1,7 @@
 <!--onclick="this.classList.toggle('flipCard')"-->
 <div class="wrapper"
      [id]=card.id.value
-     (click)="frontClick(card.id.value)"
->
+     (click)="frontClick(card.id.value)">
     <div class="card front-face">
         <div
             class="img-container">
@@ -15,15 +14,23 @@
             />
 
             <button
-                class="popup-btn"
-                (click)="showPopUpImage($any($event))">
-                <img
-                    src="https://icon-library.com/images/pop-up-icon/pop-up-icon-15.jpg"
+                class="locked-btn"
 
-width="100%"
-                style="
-top: 0px;
-"></button>
+                data-toggle = "tooltip"
+                data-placement = "right"
+                title = "Locked"
+                >
+                <img
+                    src="../assets/img/locked-icon.png"
+
+                    width="150%"
+                    style="top: 0px;">
+            </button>
+
+            <app-popup-button
+            [cardImg] = card.imageUrl.value>
+
+            </app-popup-button>
         </div>
         <div
             class="title-row"
@@ -70,6 +77,10 @@ top: 0px;
                     class="nav-item">
                     <a class="nav-link" href="#iii_{{card.id.value}}" data-bs-toggle="tab">III</a>
                 </li>
+                <li
+                    class="nav-item">
+                    <a class="nav-link" href="#iv_{{card.id.value}}" data-bs-toggle="tab">IV</a>
+                </li>
             </ul>
         </div>
         <div class="tab-content container-fluid" id="back-tabs-content">
@@ -87,9 +98,13 @@ top: 0px;
                 <app-tab-content
                     [datas]=iiiTabDatas()></app-tab-content>
             </div>
+            <div class="tab-pane" id="iv_{{card.id.value}}">
+                <app-tab-content
+                    [datas]=ivTabDatas()></app-tab-content>
+            </div>
         </div>
 
-        se
+
     </div>
 </div>
 
