Refactor some code, and readme

--- a/src/app/part/admin-page/admin-page.component.html
+++ b/src/app/part/admin-page/admin-page.component.html
@@ -49,7 +49,7 @@
         [selectedCard]=selectedCard></app-input-field>
     <button
         id="update-btn"
-        (click)="updateCard()">Update card
+        (click)="update()">Update card
     </button>
     <button
         id="create-btn"
